--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@astrojs/mdx": "^0.11.6",
     "@astrojs/tailwind": "^2.1.2",
+    "@types/node": "^18.11.9",
     "astro": "^1.6.7",
     "tailwindcss": "^3.0.24"
   }
