--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/tailwind": "^2.1.2",
     "@types/node": "^18.11.9",
     "astro": "^1.6.7",
+    "rambda": "^7.3.0",
     "tailwindcss": "^3.0.24"
   }
 }
