Squashing "Blog and 404" pages into master.
Squash details:

commit 12f1eca2e11396905aaf004ed096fda2ad3a1012
Author: Misael Taveras <hello@taverasmisael.com>
Date:   Mon Apr 24 19:08:07 2023 -0400

    make one of the blured backgrounds of the FeaturePost less round to add variety

commit 08df353da7493a7170bbe39e54309e21a0320cfa
Author: Misael Taveras <hello@taverasmisael.com>
Date:   Mon Apr 24 19:07:47 2023 -0400

    create fun PageBanner component (MouseHerramientaMisteriosa)

commit f4d35028a0e63493a05c4a4d85693f077dbf3178
Author: Misael Taveras <hello@taverasmisael.com>
Date:   Mon Apr 24 18:21:50 2023 -0400

    remove "pages" from footer. We won't use those, at least for now

commit 637de83a2c3f7295f6c2bba4578cf80d851e33bb
Author: Misael Taveras <hello@taverasmisael.com>
Date:   Mon Apr 24 18:20:23 2023 -0400

    fix typo on footer classes (darkmode)

commit 0ae6262a90a44d4f2e6f516b1a822da73d0bed9d
Author: Misael Taveras <hello@taverasmisael.com>
Date:   Sat Apr 22 19:10:02 2023 -0400

    make FeaturPost glow smaller

commit db0cce2ba1d74ba6aeac4227171d966e18bdc6a8
Author: Misael Taveras <hello@taverasmisael.com>
Date:   Sat Apr 22 18:48:38 2023 -0400

    move wiggle animation to tailwind config

commit d146498abfc4105be11719e25ecbcb69d1da5a55
Author: Misael Taveras <hello@taverasmisael.com>
Date:   Sat Apr 22 18:06:55 2023 -0400

    add a nicer feature post style

commit c727d00b19314596a1c8e9b1e270d7d549169f56
Author: Misael Taveras <hello@taverasmisael.com>
Date:   Sat Apr 22 15:53:56 2023 -0400

    improve cards and blog list page. add dark-mode support

commit 0a4f53890db572fef7c28450a6a20f78c3a4b6db
Author: Misael Taveras <hello@taverasmisael.com>
Date:   Sat Apr 22 15:36:09 2023 -0400

    Add regular card component for blog posts

commit 53ee1a9d81d4f382321acb81efde6bd23a944bde
Author: Misael Taveras <hello@taverasmisael.com>
Date:   Sat Apr 22 09:57:10 2023 -0400

    create base layout with more focus on FeaturPost component

commit 97560cd6d5

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,11 @@
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
     "verbatimModuleSyntax": true,
+    "strictNullChecks": true,
     "jsxImportSource": "solid-js",
+    "importsNotUsedAsValues": "remove",
     "jsx": "preserve",
+    "plugins": [{ "name": "@astrojs/ts-plugin" }],
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
