--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@astrojs/tailwind": "^3.1.1",
     "@astrojs/ts-plugin": "^0.4.4",
     "astro": "^2.3.0",
+    "date-fns": "^2.29.3",
     "rambda": "^7.5.0",
     "solid-js": "^1.7.3",
     "tailwindcss": "^3.3.1",
