--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "rambda": "^7.5.0",
     "solid-js": "^1.7.3",
     "tailwindcss": "^3.3.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
