--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@astrojs/mdx": "^0.19.1",
     "@astrojs/netlify": "^2.2.2",
     "@astrojs/prefetch": "^0.2.1",
+    "@astrojs/rss": "^2.4.1",
     "@astrojs/sitemap": "^1.3.0",
     "@astrojs/solid-js": "^2.1.1",
     "@astrojs/tailwind": "^3.1.2",
