--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-tailwindcss": "^3.11.0",
     "prettier": "^2.8.8",
     "prettier-plugin-astro": "^0.8.0",
-    "prettier-plugin-tailwindcss": "^0.2.8"
+    "prettier-plugin-tailwindcss": "^0.2.8",
+    "sitemap": "^7.1.1"
   }
 }
