improve env variables on code

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "prettier": "^2.8.8",
     "prettier-plugin-astro": "^0.8.0",
     "prettier-plugin-tailwindcss": "^0.2.8",
-    "sitemap": "^7.1.1"
+    "sitemap": "^7.1.1",
+    "vite": "^4.3.5"
   }
 }
