add integration for algolia indexation

--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,6 @@ PUBLIC_SITE_URL="http://localhost:3000/"
 MAILGUN_DOMAIN=""
 MAILGUN_API_KEY=""
 CONTACT_EMAIL=""
+ALGOLIA_APP_ID=""
+ALGOLIA_API_KEY=""
+PUBLIC_ALGOLIA_SEARCH_KEY=""
