--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@astrojs/solid-js": "^2.1.1",
     "@astrojs/tailwind": "^3.1.2",
     "@astrojs/ts-plugin": "^0.4.5",
+    "algoliasearch": "^4.17.0",
     "astro": "^2.4.1",
     "rambda": "^7.5.0",
     "solid-js": "^1.7.4",
@@ -37,6 +38,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@total-typescript/ts-reset": "^0.4.2",
     "@types/node": "^18.16.4",
+    "@types/remove-markdown": "^0.3.1",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "eslint": "^8.39.0",
@@ -47,7 +49,9 @@
     "prettier": "^2.8.8",
     "prettier-plugin-astro": "^0.8.0",
     "prettier-plugin-tailwindcss": "^0.2.8",
+    "remove-markdown": "^0.5.0",
     "sitemap": "^7.1.1",
+    "string-byte-slice": "^2.0.0",
     "vite": "^4.3.5"
   }
 }
