--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@astrojs/solid-js": "^2.1.1",
     "@astrojs/tailwind": "^3.1.2",
     "@astrojs/ts-plugin": "^0.4.5",
+    "@solid-primitives/scheduled": "^1.3.2",
     "algoliasearch": "^4.17.0",
     "astro": "^2.4.1",
     "rambda": "^7.5.0",
