--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "remove-markdown": "^0.5.0",
     "sitemap": "^7.1.1",
     "string-byte-slice": "^2.0.0",
+    "typescript-plugin-css-modules": "^5.0.1",
     "vite": "^4.3.5"
   }
 }
