use hardocoded colors to avoid css pruning

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "verbatimModuleSyntax": true,
     "strictNullChecks": true,
+    "noUncheckedIndexedAccess": true,
     "jsxImportSource": "solid-js",
     "importsNotUsedAsValues": "remove",
     "jsx": "preserve",
