--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@resvg/resvg-js": "^2.4.1",
     "@tailwindcss/typography": "^0.5.9",
     "@total-typescript/ts-reset": "^0.4.2",
     "@types/node": "^18.16.13",
@@ -51,6 +52,7 @@
     "prettier-plugin-astro": "^0.8.1",
     "prettier-plugin-tailwindcss": "^0.2.8",
     "remove-markdown": "^0.5.0",
+    "satori": "^0.9.1",
     "sitemap": "^7.1.1",
     "string-byte-slice": "^2.0.0",
     "typescript-plugin-css-modules": "^5.0.1",
