--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "algoliasearch": "^4.17.0",
     "astro": "^2.5.1",
     "rambda": "^7.5.0",
+    "satori-html": "^0.3.2",
     "solid-js": "^1.7.5",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4",
