add funny midjourney profile picture of GitHub copilot
I don't want to have any troubles because of this silly joke "using" github logo
people might think this is missleading, so I asked MJ to create a portrait for
copilot and now I'm using it

--- a/src/content/testimonial/en/github-copilot.yaml
+++ b/src/content/testimonial/en/github-copilot.yaml
@@ -1,5 +1,5 @@
 name: GitHub Copilot
 title: Pair progamming buddy
 link: https://github.com/features/copilot
-image: https://avatars.githubusercontent.com/u/9919?s=200&v=4
+image: /copilot-midjourney.png
 quote: Misael is a very talented engineer. He is very good at what he does and he is always willing to help others. He is a great team player and a great person to work with. /s
