--- a/src/content/testimonial/es/github-copilot.yaml
+++ b/src/content/testimonial/es/github-copilot.yaml
@@ -1,5 +1,5 @@
 name: GitHub Copilot
 title: Pair progamming buddy
 link: https://github.com/features/copilot
-image: https://avatars.githubusercontent.com/u/9919?s=200&v=4
+image: /copilot-midjourney.png
 quote: Misael es un excelente compañero de trabajo, siempre está dispuesto a ayudar y a compartir sus conocimientos. Es una persona muy responsable y comprometida con su trabajo. /s
