--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@astrojs/solid-js": "^2.2.0",
     "@astrojs/tailwind": "^3.1.3",
     "@astrojs/ts-plugin": "^0.4.5",
+    "@kobalte/core": "^0.9.6",
     "@solid-primitives/scheduled": "^1.3.2",
     "algoliasearch": "^4.17.0",
     "astro": "^2.5.1",
