--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@astrojs/solid-js": "^2.2.0",
     "@astrojs/tailwind": "^3.1.3",
     "@astrojs/ts-plugin": "^0.4.5",
+    "@fontsource-variable/fira-code": "^5.0.1",
+    "@fontsource-variable/inter": "^5.0.1",
+    "@fontsource-variable/red-hat-display": "^5.0.2",
     "@kobalte/core": "^0.9.6",
     "@solid-primitives/scheduled": "^1.3.2",
     "algoliasearch": "^4.17.0",
