--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
+    "esModuleInterop": true,
     "verbatimModuleSyntax": true,
     "strictNullChecks": true,
     "jsxImportSource": "solid-js",
