--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^0.19.2",
-    "@astrojs/netlify": "^2.2.3",
     "@astrojs/node": "^5.1.4",
     "@astrojs/prefetch": "^0.2.3",
     "@astrojs/rss": "^2.4.2",
     "@astrojs/solid-js": "^2.2.0",
     "@astrojs/tailwind": "^3.1.3",
     "@astrojs/ts-plugin": "^0.4.5",
+    "@astrojs/vercel": "^3.4.0",
     "@fontsource-variable/fira-code": "^5.0.1",
     "@fontsource-variable/inter": "^5.0.1",
     "@fontsource-variable/red-hat-display": "^5.0.2",
