move testimonials images to the repo
This will improve loading time specially on mobile.

--- a/src/content/testimonial/en/efrain-peralta.yaml
+++ b/src/content/testimonial/en/efrain-peralta.yaml
@@ -1,5 +1,5 @@
 name: Efraín Peralta
 title: Founder @ Turnly
 link: https://turnly.app/
-image: https://avatars.githubusercontent.com/u/40646537?v=4
+image: "@/assets/testimonials/efrain-peralta.png"
 quote: He is exceptional as a co-worker. His knowledge and skills in the area are pretty solid. He has a remarkable ability to teach. Misael worries about his team. He continues to be my mentor in my personal and professional projects, and he supports my ideas unconditionally.
