--- a/src/content/testimonial/en/github-copilot.yaml
+++ b/src/content/testimonial/en/github-copilot.yaml
@@ -1,5 +1,5 @@
 name: GitHub Copilot
 title: Pair progamming buddy
 link: https://github.com/features/copilot
-image: /copilot-midjourney.png
+image: "@/assets/testimonials/copilot-midjourney.png"
 quote: Misael is a very talented engineer. He is very good at what he does and he is always willing to help others. He is a great team player and a great person to work with. /s
