--- a/src/content/testimonial/es/daniel-then.yaml
+++ b/src/content/testimonial/es/daniel-then.yaml
@@ -1,5 +1,5 @@
 name: Daniel Then
 title: Technical Lead @ GBH
 link: https://www.linkedin.com/in/danielthenm/
-image: https://gbh.com.do/content/uploads/daniel_ten_03.png
+image: "@/assets/testimonials/daniel-then.png"
 quote: Durante más de 10 años trabajando llegue a formar parte de diversos equipos junto a personas con mala actitud, irresponsables, sin compromiso, pero también tuve el placer y la dicha de colaborar con personas singulares como Misael Taveras. Puedo decir que Misael es una persona dedicada a mejorar constantemente y a trabajar en equipo. Siempre tiene claro cuales son sus responsabilidades.
