--- a/src/content/testimonial/es/giancarlos-castillo.yaml
+++ b/src/content/testimonial/es/giancarlos-castillo.yaml
@@ -1,5 +1,5 @@
 name: Giancarlos Castillo
 title: Senior FrontEnd @ Virtual Mind
 link: https://github.com/giancastle
-image: https://avatars.githubusercontent.com/u/6842883?v=4
+image: "@/assets/testimonials/giancarlos-castillo.jpeg"
 quote: Gran parte de mi crecimiento personal/profesional ha sido gracias a Misael. Mi forma de ver, pensar, analizar cada linea de código y la enorme pasión que tengo hacía la Ingeniería de Software es el reflejo de alguien que ha sido mi mentor sin el haberse dado cuenta. Sin duda algunas, Misael es un sinonimo de buen trabajo.
