--- a/src/content/testimonial/es/efrain-peralta.yaml
+++ b/src/content/testimonial/es/efrain-peralta.yaml
@@ -1,5 +1,5 @@
 name: Efraín Peralta
 title: Founder @ Turnly
 link: https://turnly.app/
-image: https://avatars.githubusercontent.com/u/40646537?v=4
+image: "@/assets/testimonials/efrain-peralta.png"
 quote: Es excepcional como compañero de trabajo. Sus conocimientos y habilidades en el área son bastante sólidos. Tiene una gran habilidad para enseñar. Misael Se preocupa por su equipo. A la fecha de hoy sigue siendo mi mentor en mis proyectos personales y profesionales, apoya mis ideas de forma incondicional.
