add github issues id to all TODOS
This is to help me track what's being worked on.
Also added a new `build:preview` command to build and preview a `LOCAL_BUILD`

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "astro dev",
     "build": "pnpm astro:check && astro build",
     "build:local": "pnpm astro:check && LOCAL_BUILD=true astro build",
+    "build:preview": "pnpm build:local && pnpm preview",
     "preview": "LOCAL_BUILD=true astro preview",
     "astro": "astro",
     "astro:check": "astro check && tsc --noEmit",
