fix typos and add the first easteregg

--- a/src/content/testimonial/es/adrian-tejeda.yaml
+++ b/src/content/testimonial/es/adrian-tejeda.yaml
@@ -2,4 +2,4 @@ name: Adrían Tejeda
 title: Infra Specialist @ TransUnion
 link: https://www.linkedin.com/in/miguel-adrian-tejeda-rodriguez-71507b9b/
 image: "@/assets/testimonials/adrian-tejeda.webp"
-quote: En lo personal me parece un excelente colega, amigo y profesional, hemos tenido la oportunidad de colaborar en proyectos y compartir ciertos conocimientos. Por eso puedo decir que hasta el momento no he conocido un desarrollador tan carismatico, entusiasta y creativo como lo es Misael.
+quote: En lo personal me parece un excelente colega, amigo y profesional, hemos tenido la oportunidad de colaborar en proyectos y compartir ciertos conocimientos. Por eso puedo decir que hasta el momento no he conocido un desarrollador tan carismático, entusiasta y creativo como lo es Misael.
