--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@solid-primitives/scheduled": "^1.3.2",
     "algoliasearch": "^4.17.0",
     "astro": "^2.5.1",
+    "canvas-confetti": "^1.6.0",
     "rambda": "^7.5.0",
     "satori-html": "^0.3.2",
     "solid-js": "^1.7.5",
@@ -46,6 +47,7 @@
     "@resvg/resvg-js": "^2.4.1",
     "@tailwindcss/typography": "^0.5.9",
     "@total-typescript/ts-reset": "^0.4.2",
+    "@types/canvas-confetti": "^1.6.0",
     "@types/node": "^18.16.13",
     "@types/remove-markdown": "^0.3.1",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
