testing using unocss instead of tailwind
Of course we are using the wind preset because I don't want to rebuild the system.
In the future we can consider replacing it.

At the moment there are "issues" with the typography module

--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -3,6 +3,7 @@
   "include": [
     "./.eslintrc.cjs",
     "./astro.config.mjs",
+    "./uno.config.ts",
     "./tailwind.config.cjs",
     "./src/**/*.astro",
     "./integrations/**/*.ts",
