--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@astrojs/prefetch": "^0.2.3",
     "@astrojs/rss": "^2.4.3",
     "@astrojs/solid-js": "^2.2.0",
-    "@astrojs/tailwind": "^3.1.3",
     "@astrojs/ts-plugin": "^0.4.5",
     "@astrojs/vercel": "^3.4.1",
     "@fontsource-variable/fira-code": "^5.0.2",
@@ -33,6 +32,8 @@
     "@fontsource-variable/red-hat-display": "^5.0.3",
     "@kobalte/core": "^0.9.6",
     "@solid-primitives/scheduled": "^1.3.2",
+    "@tailwindcss/typography": "^0.5.9",
+    "@unocss/reset": "^0.52.7",
     "algoliasearch": "^4.17.1",
     "astro": "^2.5.6",
     "canvas-confetti": "^1.6.0",
@@ -41,11 +42,11 @@
     "solid-js": "^1.7.6",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4",
+    "unocss": "^0.52.7",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@resvg/resvg-js": "^2.4.1",
-    "@tailwindcss/typography": "^0.5.9",
     "@total-typescript/ts-reset": "^0.4.2",
     "@types/canvas-confetti": "^1.6.0",
     "@types/node": "^18.16.16",
