--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "@fontsource-variable/red-hat-display": "^5.0.3",
     "@kobalte/core": "^0.9.6",
     "@solid-primitives/scheduled": "^1.3.2",
-    "@tailwindcss/typography": "^0.5.9",
     "@unocss/reset": "^0.52.7",
     "algoliasearch": "^4.17.1",
     "astro": "^2.5.6",
@@ -53,14 +52,13 @@
     "@types/remove-markdown": "^0.3.1",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
+    "@unocss/eslint-config": "^0.53.0",
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-astro": "^0.26.2",
     "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-tailwindcss": "^3.12.1",
     "prettier": "^2.8.8",
     "prettier-plugin-astro": "^0.8.1",
-    "prettier-plugin-tailwindcss": "^0.2.8",
     "remove-markdown": "^0.5.0",
     "satori": "^0.9.1",
     "sitemap": "^7.1.1",
