--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@astrojs/mdx": "^0.19.7",
     "@astrojs/node": "^5.2.0",
+    "@astrojs/partytown": "^1.2.3",
     "@astrojs/prefetch": "^0.2.3",
     "@astrojs/rss": "^2.4.3",
     "@astrojs/solid-js": "^2.2.0",
