fix: add container to contact page

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "pnpm astro:check && astro build",
-    "build:local": "pnpm astro:check && LOCAL_BUILD=true astro build",
+    "build:local": "pnpm astro:check && rm -rf ./dist && LOCAL_BUILD=true astro build",
     "build:preview": "pnpm build:local && pnpm preview",
     "preview": "LOCAL_BUILD=true astro preview",
     "astro": "astro",
