--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -4,8 +4,9 @@
     "./.eslintrc.cjs",
     "./astro.config.mjs",
     "./tailwind.config.cjs",
-    "./src/**/*.astro",
     "./integrations/**/*.ts",
+    "./middleware.js",
+    "./src/**/*.astro",
     "./src/**/*.js",
     "./src/**/*.ts",
     "./src/**/*.tsx",
