--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@example/basics",
+  "name": "taverasmisael-website",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.5.0",
   "private": true,
   "packageManager": "pnpm@8.5.1",
   "scripts": {
