--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "prettier-plugin-tailwindcss": "^0.5.9",
     "remove-markdown": "^0.5.0",
     "satori": "^0.10.11",
+    "sharp": "^0.33.1",
     "sitemap": "^7.1.1",
     "string-byte-slice": "^3.0.0",
     "typescript-plugin-css-modules": "^5.0.2",
