--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.5.0",
   "private": true,
-  "packageManager": "pnpm@8.5.1",
+  "packageManager": "pnpm@8.13.1",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -17,55 +17,56 @@
     "format:save": "prettier --write .",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "format:fix": "pnpm format:save && npm run lint:fix"
+    "format:fix": "pnpm format:save && pnpm run lint:fix"
   },
   "dependencies": {
-    "@astrojs/mdx": "^0.19.7",
-    "@astrojs/node": "^5.3.0",
-    "@astrojs/prefetch": "^0.2.3",
-    "@astrojs/rss": "^2.4.3",
-    "@astrojs/solid-js": "^2.2.0",
-    "@astrojs/tailwind": "^4.0.0",
-    "@astrojs/ts-plugin": "^1.0.10",
-    "@astrojs/vercel": "^3.7.0",
-    "@fontsource-variable/fira-code": "^5.0.5",
-    "@fontsource-variable/inter": "^5.0.5",
-    "@fontsource-variable/red-hat-display": "^5.0.6",
-    "@kobalte/core": "^0.9.8",
-    "@solid-primitives/fetch": "^2.4.6",
-    "@solid-primitives/scheduled": "^1.3.2",
-    "algoliasearch": "^4.18.0",
-    "astro": "^2.8.0",
-    "canvas-confetti": "^1.6.0",
-    "rambda": "^8.1.0",
+    "@astrojs/check": "^0.3.4",
+    "@astrojs/mdx": "^2.0.2",
+    "@astrojs/node": "^7.0.2",
+    "@astrojs/rss": "^4.0.1",
+    "@astrojs/solid-js": "^3.0.2",
+    "@astrojs/tailwind": "^5.0.4",
+    "@astrojs/ts-plugin": "^1.3.1",
+    "@astrojs/vercel": "^6.1.0",
+    "@fontsource-variable/fira-code": "^5.0.16",
+    "@fontsource-variable/inter": "^5.0.16",
+    "@fontsource-variable/red-hat-display": "^5.0.19",
+    "@kobalte/core": "^0.11.2",
+    "@solid-primitives/fetch": "^2.4.7",
+    "@solid-primitives/scheduled": "^1.4.1",
+    "algoliasearch": "^4.22.0",
+    "astro": "^4.0.7",
+    "canvas-confetti": "^1.9.2",
+    "rambda": "^8.6.0",
     "satori-html": "^0.3.2",
-    "solid-js": "^1.7.7",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^5.1.6",
-    "zod": "^3.21.4"
+    "solid-js": "^1.8.7",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@resvg/resvg-js": "^2.4.1",
-    "@tailwindcss/typography": "^0.5.9",
-    "@total-typescript/ts-reset": "^0.4.2",
-    "@types/canvas-confetti": "^1.6.0",
-    "@types/node": "^20.4.1",
-    "@types/remove-markdown": "^0.3.1",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.44.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-astro": "^0.27.2",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "@resvg/resvg-js": "^2.6.0",
+    "@tailwindcss/typography": "^0.5.10",
+    "@total-typescript/ts-reset": "^0.5.1",
+    "@types/canvas-confetti": "^1.6.4",
+    "@types/node": "^20.10.5",
+    "@types/remove-markdown": "^0.3.4",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@typescript-eslint/parser": "^6.16.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-astro": "^0.31.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
-    "prettier": "^3.0.0",
-    "prettier-plugin-astro": "^0.10.0",
-    "prettier-plugin-tailwindcss": "^0.3.0",
+    "prettier": "^3.1.1",
+    "prettier-plugin-astro": "^0.12.3",
+    "prettier-plugin-tailwindcss": "^0.5.9",
     "remove-markdown": "^0.5.0",
-    "satori": "^0.10.1",
+    "satori": "^0.10.11",
+    "sharp": "^0.33.1",
     "sitemap": "^7.1.1",
-    "string-byte-slice": "^2.0.0",
-    "typescript-plugin-css-modules": "^5.0.1",
-    "vite": "^4.3.9"
+    "string-byte-slice": "^3.0.0",
+    "typescript-plugin-css-modules": "^5.0.2",
+    "vite": "^5.0.10"
   }
 }
