--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/mdx": "^3.1.8",
-    "@astrojs/node": "^8.2.3",
-    "@astrojs/rss": "^4.0.5",
-    "@astrojs/solid-js": "^4.0.1",
-    "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/ts-plugin": "^1.5.3",
-    "@astrojs/vercel": "^7.3.4",
+    "@astrojs/mdx": "4.0.0-beta.2",
+    "@astrojs/node": "9.0.0-beta.2",
+    "@astrojs/rss": "^4.0.8",
+    "@astrojs/solid-js": "3.0.0-beta.2",
+    "@astrojs/tailwind": "^5.1.2",
+    "@astrojs/ts-plugin": "^1.10.2",
+    "@astrojs/vercel": "8.0.0-beta.2",
     "@fontsource-variable/fira-code": "^5.0.16",
     "@fontsource-variable/inter": "^5.0.16",
     "@fontsource-variable/red-hat-display": "^5.0.19",
@@ -38,7 +38,7 @@
     "@solid-primitives/fetch": "^2.4.8",
     "@solid-primitives/scheduled": "^1.4.2",
     "algoliasearch": "^5.8.1",
-    "astro": "^4.4.9",
+    "astro": "5.0.0-beta.4",
     "canvas-confetti": "^1.9.2",
     "rambda": "^9.1.0",
     "satori-html": "^0.3.2",
