chore: Migrate deps - Start using Astro@beta v5 (#34)
* chore: update core dependencies to latest

* feat: migrate to astro@5

* feat: migrate collections to new collections API

* BREAKING CHANGE: use `id`/`pid` instead of `slug`

Slugs are deprecated on the new collections API, so we are deprecating them internally too.

* fix: post image generator

* chore: update version

Also, use a broader node version (20 instead of 21).

* fix: sitemaps and migrate to `astro:env`

* refactor: remove misleading `lastMod` time on sitemap entries

--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "taverasmisael-website",
   "type": "module",
-  "version": "0.5.1",
+  "version": "0.6.0",
   "private": true,
-  "packageManager": "pnpm@8.15.4",
+  "packageManager": "pnpm@9.12.1",
+  "engines": {
+    "node": ">=20.0"
+  },
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -20,22 +23,22 @@
     "format:fix": "pnpm format:save && pnpm run lint:fix"
   },
   "dependencies": {
-    "@astrojs/check": "^0.5.6",
-    "@astrojs/mdx": "^2.1.1",
-    "@astrojs/node": "^8.2.3",
-    "@astrojs/rss": "^4.0.5",
-    "@astrojs/solid-js": "^4.0.1",
-    "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/ts-plugin": "^1.5.3",
-    "@astrojs/vercel": "^7.3.4",
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/mdx": "4.0.0-beta.2",
+    "@astrojs/node": "9.0.0-beta.2",
+    "@astrojs/rss": "^4.0.8",
+    "@astrojs/solid-js": "3.0.0-beta.2",
+    "@astrojs/tailwind": "^5.1.2",
+    "@astrojs/ts-plugin": "^1.10.2",
+    "@astrojs/vercel": "8.0.0-beta.2",
     "@fontsource-variable/fira-code": "^5.0.16",
     "@fontsource-variable/inter": "^5.0.16",
     "@fontsource-variable/red-hat-display": "^5.0.19",
-    "@kobalte/core": "^0.12.2",
+    "@kobalte/core": "^0.13.7",
     "@solid-primitives/fetch": "^2.4.8",
     "@solid-primitives/scheduled": "^1.4.2",
-    "algoliasearch": "^4.22.1",
-    "astro": "^4.4.9",
+    "algoliasearch": "^5.8.1",
+    "astro": "5.0.0-beta.4",
     "canvas-confetti": "^1.9.2",
     "rambda": "^9.1.0",
     "satori-html": "^0.3.2",
@@ -47,24 +50,24 @@
   "devDependencies": {
     "@resvg/resvg-js": "^2.6.0",
     "@tailwindcss/typography": "^0.5.10",
-    "@total-typescript/ts-reset": "^0.5.1",
+    "@total-typescript/ts-reset": "^0.6.1",
     "@types/canvas-confetti": "^1.6.4",
-    "@types/node": "^20.11.24",
+    "@types/node": "^22.7.5",
     "@types/remove-markdown": "^0.3.4",
-    "@typescript-eslint/eslint-plugin": "^7.1.0",
-    "@typescript-eslint/parser": "^7.1.0",
-    "eslint": "^8.57.0",
+    "@typescript-eslint/eslint-plugin": "^8.8.1",
+    "@typescript-eslint/parser": "^8.8.1",
+    "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-astro": "^0.31.4",
+    "eslint-plugin-astro": "^1.2.4",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-tailwindcss": "^3.14.3",
     "prettier": "^3.2.5",
-    "prettier-plugin-astro": "^0.13.0",
-    "prettier-plugin-tailwindcss": "^0.5.11",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "remove-markdown": "^0.5.0",
-    "satori": "^0.10.13",
+    "satori": "^0.11.2",
     "sharp": "^0.33.2",
-    "sitemap": "^7.1.1",
+    "sitemap": "^8.0.0",
     "string-byte-slice": "^3.0.0",
     "typescript-plugin-css-modules": "^5.1.0",
     "vite": "^5.1.4"
